First version of about dialog
- gresrouce is now configured and ready to use

--- a/data/meson.build
+++ b/data/meson.build
@@ -19,3 +19,10 @@ install_data(
     join_paths('assets', 'icons', 'com.github.com.hmleal.crypto.bitcoin-cash-bch.svg'),
     install_dir: join_paths(icons_dir , '32x32', 'status'),
 )
+
+
+resource_files = files ('file.gresource.xml')
+resources = gnome.compile_resources ('com.github.hmleal.crypto',
+                                     resource_files,
+                                     c_name: 'resources',
+                                     source_dir: ['data'])
