--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,7 @@
 # project name and programming language
 project('com.github.hmleal.crypto', 'vala', 'c', version: '0.0.1')
 
+gnome = import ('gnome')
+
 subdir('data')
 subdir('src')
