Rename resource images

--- a/data/meson.build
+++ b/data/meson.build
@@ -6,17 +6,17 @@
 icons_dir = join_paths(get_option('datadir'), 'icons', 'hicolor')
 
 install_data(
-    join_paths('assets', 'icons', 'com.github.com.hmleal.crypto.bitcoin-btc.svg'),
+    join_paths('assets', 'icons', 'com.github.com.hmleal.crypto.btc.svg'),
     install_dir: join_paths(icons_dir , '32x32', 'status'),
 )
 
 install_data(
-    join_paths('assets', 'icons', 'com.github.com.hmleal.crypto.ethereum-eth.svg'),
+    join_paths('assets', 'icons', 'com.github.com.hmleal.crypto.eth.svg'),
     install_dir: join_paths(icons_dir , '32x32', 'status'),
 )
 
 install_data(
-    join_paths('assets', 'icons', 'com.github.com.hmleal.crypto.bitcoin-cash-bch.svg'),
+    join_paths('assets', 'icons', 'com.github.com.hmleal.crypto.bch.svg'),
     install_dir: join_paths(icons_dir , '32x32', 'status'),
 )
 
