--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,7 @@
 # project name and programming language
 project('com.github.hmleal.crypto', 'vala', 'c', version: '0.0.1')
 
+i18n = import('i18n')
 gnome = import ('gnome')
 
 subdir('data')
