--- a/src/meson.build
+++ b/src/meson.build
@@ -1,4 +1,5 @@
-# Create a new executable, list the files we want to compile, list the dependencies we need, and install
+# Create a new executable, list the files we want to compile, list the
+# dependencies we need, and install
 executable(
     meson.project_name(),
 
